* Fixed cleaning of Unicode subjects.

0.9 (2006-02-28):
=================

* Fixed the "simple" example, which has a new name, some better default
  variables, and an updated mixin demo. Its ``config.py`` also lists the
  default values in a hopefully more readable way. (Thanks to Aigars
  Mahinovs for reporting this, and writing the Expat formatter.)

0.8 (2006-02-21):
=================

* Don't skip entries with empty subjects when deciding what pages to
  output.

* Use Kid's xhtml-strict serializer so that we get the correct XHTML
  doctype. Layouts should now simply print the template object rather
  than calling serialize directly.

* Split the module into a package. If you have an old version installed
  you'll want to remove it from site-packages.

0.7 (2006-02-10):
=================

* Removed EmPy entirely. While we could still plug something else in
  with not too much hassle, I don't think it's worth keeping if we have
  to work around broken Unicode support.

* Layouts now just print their serialized pages; we capture sys.stdout
  and save it.

0.6 (2006-02-10):
=================

* Added a cache interface so that any different properties that want to
  cache themselves can do so in a consistent way. We may also want to
  save this cache to disk at some point in the futre.

* Added a method to expand Kid templates from your layout instead of
  EmPy. At the moment, both work, but the Kid examples are really clunky
  since they are just a straight port. Instead of building pages in the
  same way, we could make use of Kid's much greater capabilities. I will
  have to consider if EmPy should stay or go first. (Thanks to Erich
  Schubert for the suggestion!)

0.5 (2006-02-08):
=================

* Switch back to ``email`` for parsing messages, so we can support
  encoded messages (quoted-printable, charset RFC 2047 headers, whatever),
  and add a ``charset`` option in the configuration to specify the
  default encoding for data we send to the templates.
