@@ -1,3 +1,5 @@
+* Changed default config dir to ~/.mnemosyne.
+
 * Fixed cleaning of Unicode subjects.
 
 0.9 (2006-02-28):
